--- a/src/components/Auth/AuthStateComponent/styles.module.css
+++ b/src/components/Auth/AuthStateComponent/styles.module.css
@@ -47,45 +47,46 @@
 }
 
 .verify_again_button {
-    white-space: nowrap;
-    align-items: center;
-    background-image: grey;
-    border: 0;
-    border-radius: 8px;
-    border: solid grey;
-    box-shadow: rgba(83, 82, 84, 0.2) 0 15px 30px -5px;
-    box-sizing: border-box;
-    color: grey;
-    font-family: 
-      'EireneSans',
-      -apple-system,
-      BlinkMacSystemFont,
-      'Segoe UI',
-      Roboto,
-      Oxygen,
-      Ubuntu,
-      Cantarell, 
-      'Fira Sans',
-      'Droid Sans',
-      'Helvetica Neue',
-      sans-serif;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    text-rendering: optimizeLegibility;
-    font-size: 20px;
-    justify-content: center;
-    line-height: 1em;
-    width: 20vh;
-    height: 40px;
-    min-width: 120px;
-    margin: 10px 0;
-    padding: 12px 20px;
-    text-decoration: none;
-    user-select: none;
-    -webkit-user-select: none;
-    touch-action: manipulation;
-    white-space: nowrap;
-    cursor: pointer;
+  white-space: nowrap;
+  align-items: center;
+  background-image: grey;
+  background-color: rgb(240, 240, 240);
+  border: 0;
+  border-radius: 8px;
+  border: 1px solid grey;
+  box-shadow: rgba(83, 82, 84, 0.2) 0 15px 30px -5px;
+  box-sizing: border-box;
+  color: grey;
+  font-family: 
+    'EireneSans',
+    -apple-system,
+    BlinkMacSystemFont,
+    'Segoe UI',
+    Roboto,
+    Oxygen,
+    Ubuntu,
+    Cantarell, 
+    'Fira Sans',
+    'Droid Sans',
+    'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-rendering: optimizeLegibility;
+  font-size: 16px;
+  justify-content: center;
+  line-height: 1em;
+  width: 20vh;
+  height: 40px;
+  min-width: 120px;
+  margin: 10px 0;
+  padding: 12px 20px;
+  text-decoration: none;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  white-space: nowrap;
+  cursor: pointer;
 }
 
 .verify_again_button:active,
