--- a/src/pages/ProfilePage/styles.module.css
+++ b/src/pages/ProfilePage/styles.module.css
@@ -349,7 +349,6 @@
   
   .input_field::placeholder {
     font-size: 14px;
-    height: auto;
   }
   
   .input_button,
@@ -368,13 +367,17 @@
   .clear_lists_button,
   .add_to_wishlist_button {
     margin-left: 10px;
+    margin-bottom: 10px;
   }
   
-  .name_change_output,
   .name_change_output_random,
   .auth_method {
     margin-left: 0;
     text-align: left; 
+  }
+
+  .name_change_output {
+    margin-left: 10px;
   }
   
   .random_flag img {
@@ -421,10 +424,13 @@
     margin-bottom: 0;
   }
 
+  .clear_lists_button {
+    margin-bottom: 10px;
+  }
+
   .input_field {
     max-width: 250px;
     font-size: 15px;
-    height: 40px;
     min-height: 36px;
   }
 
@@ -434,7 +440,7 @@
   
   .name_change_output,
   .name_change_output_random {
-    font-size: 14px;
+    font-size: 16px;
   }
 
   .random_container {
